[Test] k6 scripts (#22)
* test: k6 test

* refactor: prod.yml 파일 url 변경

* fix: test코드 엔드포인트 수정

* fix: server timeout